# SeismicFetch

./: .gitignore  Dockerfile  README.md  csv_tool.py  csvtojson.py  docker-compose.yml  get_mongo_db.py  main.py  mongo_pipeline.py  mongo_query.py  mongod.conf  pyproject.toml  requirements.txt  seedlink_client.py  telegram_bot.py  ultimaSismicidadSSN.py  ultima_sismicidad.py  ultima_sismicidad_emsc.py  ultima_sismicidad_ssn.py  ultima_sismicidad_usgs.py
.github/workflows/: docker-image.yml
app/: app_mapa.py  get_mongo_db.py
app/templates/: index.html
src/: .env.example  emsc_client.py  fetch_event_id.py  fetch_ssn.py  fetch_usgs.py  get_mongo_db.py  helpers.py  main.py  mongo_model.py  seedlink_client.py  telegram_bot.py  telegram_parse.py  ultima_sismicidad_emsc.py  ultima_sismicidad_ssn.py  utils.py
src/db/: get_mongo_db.py  mongo_model.py
src/telegram/: telegram_parser.py
test/: test_fetch_event_id.py  test_telegram_event_parse.py
