[project]
name = "SeismicFetch"
version = "2024.0.1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "bs4",
    "requests",
    "tornado",
    "pymongo",
    "pytz",
    "loguru",
    "python-telegram-bot"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]